syntax = "proto3";

option go_package = "commons/pbdefines/pbobjs";

message LogEntities {
  repeated LogEntity entities = 1;
}

message LogEntity {
    oneof logOf{
      UserConnectLog userConnectLog = 11;
      ConnectionLog connectionLog = 12;
      BusinessLog businessLog = 13;
    }
}
message UserConnectLog{
  int64 timestamp = 1;
  string app_key = 2;
  string user_id = 3;
  string session = 4;
  int32 code = 5;
  string platform = 6;
  string version = 7;
  string client_ip = 8;
}

message ConnectionLog {
  int64 timestamp = 1;
  string app_key = 2;
  string session = 3;
  int32 index = 4;
  string action = 5;
  string method = 6;
  string target_id = 7;
  int32 data_len  = 8;
  int32 code = 9;
}

message BusinessLog {
  string timestamp = 1;
  string session = 2;
  uint32 index = 3;
  string service_name = 4;
  string method = 5;
  string message = 6;
  string appKey = 9;
}